Add smoke success electromobility test

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "test:headless": "cypress run"
   },
   "devDependencies": {
-    "cypress": "^13.6.3"
+    "cypress": "^13.6.3",
+    "cypress-iframe": "^1.0.1"
   }
 }
