issue #002 add basic tests for info box

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "test": "cypress open",
-    "test:headless": "cypress run"
+    "test:headless": "cypress run --browser chrome"
   },
   "devDependencies": {
     "cypress": "^13.6.3"
