issue #002 remove cypress-real-events

--- a/package.json
+++ b/package.json
@@ -6,7 +6,5 @@
   "devDependencies": {
     "cypress": "^13.6.3"
   },
-  "dependencies": {
-    "cypress-real-events": "^1.11.0"
-  }
+  "dependencies": {}
 }
